Bug 406157 - Krita hangs on converting color space
Summary: Krita hangs on converting color space
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Color models (other bugs)
Version First Reported In: git master (please specify the git hash!)
Platform: Arch Linux Linux
: NOR crash
Target Milestone: ---
Assignee: Dmitry Kazakov
URL:
Keywords: regression
: 404553 (view as bug list)
Depends on:
Blocks:
 
Reported: 2019-04-02 15:58 UTC by Storm Engineer
Modified: 2019-04-30 11:40 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Storm Engineer 2019-04-02 15:58:20 UTC
Krita hangs on converting color space

Posted as per request of Dmitry

Backtrace: https://pastebin.com/8g7b27G5
Comment 1 Halla Rempt 2019-04-03 07:20:21 UTC
assert:

ASSERT (krita): "m_buffer[currentIndex].loadAcquire() > 0" in file /home/boud/dev/krita/libs/image/tiles3/KisTiledExtentManager.cpp, line 87
KCrash: crashing... crashRecursionCounter = 2
KCrash: Application Name = krita path = /home/boud/dev/i-krita/bin pid = 17269
KCrash: Arguments: /home/boud/dev/i-krita/bin/krita 
KCrash: Attempting to start /usr/lib/x86_64-linux-gnu/libexec/drkonqi from kdeinit
sock_file=/run/user/1000/kdeinit5__0


backtrace:

Thread 10 (Thread 0x7fedc77fe700 (LWP 17342)):
[KCrash Handler]
#6  __GI_raise (sig=sig@entry=6) at ../sysdeps/unix/sysv/linux/raise.c:51
#7  0x00007fee33372801 in __GI_abort () at abort.c:79
#8  0x00007fee33d47e7b in QMessageLogger::fatal(char const*, ...) const () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#9  0x00007fee3569a80e in kis_assert_common (assertion=assertion@entry=0x7fee361704a0 "m_buffer[currentIndex].loadAcquire() > 0", file=file@entry=0x7fee36170428 "/home/boud/dev/krita/libs/image/tiles3/KisTiledExtentManager.cpp", line=line@entry=87, throwException=throwException@entry=false, isIgnorable=isIgnorable@entry=false) at /home/boud/dev/krita/libs/global/kis_assert.cpp:90
#10 0x00007fee3569a92a in kis_assert_recoverable (assertion=assertion@entry=0x7fee361704a0 "m_buffer[currentIndex].loadAcquire() > 0", file=file@entry=0x7fee36170428 "/home/boud/dev/krita/libs/image/tiles3/KisTiledExtentManager.cpp", line=line@entry=87) at /home/boud/dev/krita/libs/global/kis_assert.cpp:103
#11 0x00007fee35daafe8 in KisTiledExtentManager::Data::remove (index=8, this=0x55a8480545e0) at /home/boud/dev/krita/libs/image/tiles3/KisTiledExtentManager.cpp:87
#12 KisTiledExtentManager::notifyTileRemoved (this=0x55a848054598, col=<optimized out>, row=8) at /home/boud/dev/krita/libs/image/tiles3/KisTiledExtentManager.cpp:261
#13 0x00007fee35da168e in KisTiledDataManager::clear (this=this@entry=0x55a848054560, clearRect=..., clearPixel=<optimized out>, clearPixel@entry=0x55a84601f5f0 "2") at /home/boud/dev/krita/libs/image/tiles3/kis_tiled_data_manager.cc:375
#14 0x00007fee35da191a in KisTiledDataManager::clear (this=this@entry=0x55a848054560, x=<optimized out>, y=y@entry=0, w=w@entry=1600, h=h@entry=1200, clearPixel=clearPixel@entry=0x55a84601f5f0 "2") at /home/boud/dev/krita/libs/image/tiles3/kis_tiled_data_manager.cc:425
#15 0x00007fee3602d2a1 in KisDataManager::clear (def=0x55a84601f5f0 "2", h=1200, w=1600, y=0, x=<optimized out>, this=0x55a848054560) at /home/boud/dev/krita/libs/image/kis_datamanager.h:200
#16 KisPaintDevice::Private::KisPaintDeviceStrategy::clear (this=0x55a84893fc20, rc=...) at /home/boud/dev/krita/libs/image/kis_paint_device_strategies.h:75
#17 0x00007fee35f36f15 in KisAsyncMerger::setupProjection (useTempProjection=false, rect=..., currentLeaf=..., this=<optimized out>, this=<optimized out>, this=<optimized out>) at /home/boud/dev/krita/libs/image/kis_async_merger.cpp:329
#18 KisAsyncMerger::startMerge (this=0x55a848cca4d8, walker=..., notifyClones=<optimized out>) at /home/boud/dev/krita/libs/image/kis_async_merger.cpp:252
#19 0x00007fee3616d15c in non-virtual thunk to KisUpdateJobItem::run() () from /home/boud/dev/i-krita/lib/x86_64-linux-gnu/libkritaimage.so.18
#20 0x00007fee33d70352 in ?? () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#21 0x00007fee33d6bbc2 in ?? () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#22 0x00007fee2cf0c6db in start_thread (arg=0x7fedc77fe700) at pthread_create.c:463
#23 0x00007fee3345388f in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95
Comment 2 Storm Engineer 2019-04-03 16:12:14 UTC
I can't reproduce anymore with current master. Fixed?
Comment 3 Dmitry Kazakov 2019-04-03 16:29:38 UTC
Git commit d8abbc50a7c2f8032760fe5f5ed150b1f00ad11f by Dmitry Kazakov.
Committed on 03/04/2019 at 16:29.
Pushed by dkazakov into branch 'master'.

Fix hangup on changing image's color space

One day we will finally convert color space conversion actions
into the strokes and then we will not need these queues (though
there is nothing bad in them, even with strokes).

M  +15   -2    libs/image/kis_image_signal_router.cpp

https://commits.kde.org/krita/d8abbc50a7c2f8032760fe5f5ed150b1f00ad11f
Comment 4 Dmitry Kazakov 2019-04-30 11:40:48 UTC
*** Bug 404553 has been marked as a duplicate of this bug. ***