Fix hangup on changing image's color space

One day we will finally convert color space conversion actions
into the strokes and then we will not need these queues (though
there is nothing bad in them, even with strokes).

BUG:406157